Fix mobile filter functionality issue
- Resolve issue with filters not working on mobile devices
- Update relevant documentation in README.md
- Modify layer_widget and dependencies to ensure compatibility

--- a/example/web/index.html
+++ b/example/web/index.html
@@ -50,6 +50,7 @@
         onEntrypointLoaded: function (engineInitializer) {
           engineInitializer.initializeEngine({
             useColorEmoji: true,
+            renderer:'canvaskit'
           }).then(function (appRunner) {
             appRunner.runApp();
           });
