perf: run image generation in background to improve image generation speed.
Image generation is now isolated from the main thread, speeding up the process significantly. Generation time varies between 0 and 1400ms, depending on user interaction and device performance.

--- a/example/web/index.html
+++ b/example/web/index.html
@@ -2,24 +2,11 @@
 <html>
 
 <head>
-  <!--
-    If you are serving your web app in a path other than the root, change the
-    href value below to reflect the base path you are serving from.
-
-    The path provided below has to start and end with a slash "/" in order for
-    it to work correctly.
-
-    For more details:
-    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
-
-    This is a placeholder for base href that will be replaced by the value of
-    the `--base-href` argument provided to `flutter build`.
-  -->
   <base href="/pro_image_editor/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Examples from the pro_image_editor package.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -30,15 +17,9 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png" />
 
-  <title>example</title>
+  <title>Examples</title>
   <link rel="manifest" href="manifest.json">
 
-  <script>
-    // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = null;
-  </script>
-  <!-- This script adds the flutter initialization JS code -->
-  <script src="flutter.js" defer></script>
 
   <style>
     /* Loading indicator styles */
@@ -78,37 +59,12 @@
 
 <body>
   <!-- Loading spinner -->
-  <div class="loading-spinner-wrapper">
+  <div id="loading-screen" class="loading-spinner-wrapper">
     <div class="loading-spinner"></div>
     <p style="margin-top: 10px;">Flutter Loading...</p>
   </div>
 
-  <script>
-    window.addEventListener('load', function (ev) {
-      // Download main.dart.js
-      _flutter.loader.loadEntrypoint({
-        serviceWorker: {
-          serviceWorkerVersion: serviceWorkerVersion,
-        },
-        onEntrypointLoaded: function (engineInitializer) {
-          engineInitializer.initializeEngine({
-            useColorEmoji: true,
-            renderer: 'canvaskit'
-          }).then(function (appRunner) {
-            appRunner.runApp();
-          });
-        }
-      });
-    });
-
-    window.addEventListener('flutter-first-frame', function () {
-      var loadingScreen = document.getElementById('loading-screen');
-      if (loadingScreen) {
-        loadingScreen.style.display = 'none';
-        document.removeChild(loadingScreen);
-      }
-    });
-  </script>
+  <script src="flutter_bootstrap.js" async></script>
 </body>
 
 </html>
